Customer-Selfservice-App/force-app/main/default/objects/Dish_Order__c/Dish_Order__c.object-meta.xml
<CustomObject>
    <label>Dish Order</label>
    <nameField>
        <label>Dish_Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dish orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>