Customer-Selfservice-App/force-app/main/default/objects/Dish_Order__c/fields/Dish__c.field-meta.xml
<CustomField>
    <fullName>Dish__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dish</label>
    <referenceTo>Dish__c</referenceTo>
    <relationshipName>Dish_orders</relationshipName>
    <type>Lookup</type>
</CustomField>