Customer-Selfservice-App/force-app/main/default/objects/Dish_Order__c/fields/Item_Order__c.field-meta.xml
<CustomField>
    <fullName>Item_Order__c</fullName>
    <label>Item Order</label>
    <referenceTo>Item_Order__c</referenceTo>
    <relationshipLabel>Dish orders</relationshipLabel>
    <relationshipName>Dish_orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>